--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "install": "^0.13.0",
+    "json": "^9.0.6",
     "npm": "^6.14.4",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "webpack": "^4.43.0",
