--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "example-project",
+  "name": "udacity-project-4",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
@@ -14,6 +14,9 @@
   "description": "",
   "dependencies": {
     "aylien_textapi": "^0.7.0",
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^25.5.1",
+    "babel-plugin-transform-imports": "^2.0.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -26,11 +29,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.5.4",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.0",
     "sass-loader": "^8.0.2",
