Project done, final commit before review

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
@@ -19,11 +19,18 @@
     "babel-plugin-transform-imports": "^2.0.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "ebnf-parser": "^0.1.10",
     "express": "^4.17.1",
     "install": "^0.13.0",
+    "jison": "^0.4.18",
     "json": "^9.0.6",
     "npm": "^6.14.4",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "parse": "^2.13.0",
+    "parser": "^0.1.4",
+    "regex": "^0.1.1",
+    "transform-parse": "^1.0.5",
+    "transform-parser": "^1.0.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
@@ -32,6 +39,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "html-webpack-plugin": "^3.2.0",
