--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-jest": "^25.5.1",
     "babel-plugin-transform-imports": "^2.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ebnf-parser": "^0.1.10",
     "express": "^4.17.1",
